# xmm-epicpn-simulator

./: .gitignore  .pre-commit-config.yaml  01_download_files.py  02_generate_simput.py  03_xmm_simulation.py  03b_make_region_file.py  04_combine_simulations.py  Dockerfile  README.md  combine_simulations.py  config.json  config.toml  entrypoint.sh  illustris_tng_image_gen.py  pyproject.toml  requirements.txt  simput_gen.py  simulator.def  xmm_simulation.py
cfg/: 01_download_files.json  02_generate_simput.json  03_xmm_simulation.json  04_combine_simulations.json  README.md  combine.json  illustris.json  simput.json  xmm.json
docs/: installation.md  installation_guide.md
illustris_tng/: data_handling.py  download_data.py  fits_gen.py
other/: create_dataset_subset.py  load_fits.ipynb  targz_to_fitsgz.ipynb
other/background_noise_gen/: create_background_simput.py  pntffg_spectrum.ds
other/detector_mask_creation/: create_detector_masks.py
other/psf_gen/: ccf.cif  cmp_psf_SIXTE.csh  cmp_psf_SIXTE_small.csh  command.txt
other/simput_input/: apec_emissivity_v3.h5  move_and_resize_fits.ipynb  yt_to_xray_image.ipynb
other/validation/: check_grid_sims.ipynb  measure_sources_locations.ipynb
other/vignet_creation/: XRT3_XAREAEF_0012.CCF  create_xmm_vinget_sixte.ipynb  simput_check_vignetting_psf.ipynb  simput_check_vignetting_psf.py
res/: agn_counts.cgi
res/ccf/: README.md
res/detector_masks/: pn_mask_500_2000_detxy_1x.ds  pn_mask_500_2000_detxy_2x.ds  pn_mask_500_2000_detxy_4x.ds
res/illustris_tng/: cloudy_emissivity_v2.h5
simput/: agn_distribution.py  generate_background.py  generate_exposuremap.py  generation.py  img_simputgen.py  point_source.py  spectrum.py  utils.py
singularity/: conda.def  heasoft.def  sas.def  sixte.def  ubuntu.def
sixte/: image_gen.py  simulation.py  simulator.py
src/: config.py  end2end.py
src/illustris_tng/: __init__.py  data_handling.py  download_data.py  fits.py  web_api.py
src/simput/: agn.py  (+6 more)
utils/: external_run.py  file_utils.py  fits_utils.py  log.py  multiprocessing.py
visualisations/: plot_agn_dist.py  plot_evt_type.py
xmm/: pn_ccd.py  pn_ff.py  utils.py
(+45 files in other folders)
